# subway_package

./: .gitignore  README.md  pyproject.toml
data/: data.txt
gtfs/gtfs_test/: trips.txt
mtatabase/: gtfs_script.py  loggedtrips.py  mtatabase.py  schedule.py  utils.py
schema/: ERD.dbdiagram  ERD.dbml  ERD.dbml.layout.json
src/: database.py  gtfs_script.py  mtatabase.py  schedule.py  utils.py
