[project]
name = "MTAtabase"
version = "0.1.0"
description = "MTA GTFS parser and database system that bypasses API feeds"
readme = "README.md"
authors = [
    { name = "pacmanboss256", email = "pacmanboss972@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "pandas-stubs>=3.0.0.260204",
    "pip>=26.0.1",
    "requests>=2.33.1",
]

license =  "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
